<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingRight="10dp"
    android:paddingLeft="5dp"
    android:layout_marginTop="2dp">
    <TextView
        android:id="@+id/header_ubutabazi"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sobanura_ubutabazi"
        android:textSize="16dp"/>
<TextView
    android:id="@+id/tvName"
    android:text="@string/amazina"
    style="@style/textview"/>
    <EditText
        android:id="@+id/edtName"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        style="@style/inputs"/>
    <TextView
        android:id="@+id/tvPhone"
        style="@style/textview"
        android:text="@string/phone"/>
    <EditText
        android:id="@+id/edtPhone"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:hint="07XXXXXXX"
        android:inputType="number"
        android:maxLength="12"
        style="@style/inputs"/>
    <TextView
        android:id="@+id/tvDescription"
        style="@style/textview"
        android:text="@string/ubufasha"/>
    <EditText
        android:id="@+id/edtDescrption"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="50dp"
        android:maxLines="4"
        style="@style/inputs"
        />
    <TextView
        android:id="@+id/tvgpsinfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/locationwarn"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:textSize="14dp"
        android:drawableStart="@drawable/ic_warning_black_24dp"
        android:drawableLeft="@drawable/ic_warning_black_24dp"
        android:layout_marginTop="5dp"
        />
    <Button
        android:id="@+id/btnOhereza"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ohereza"
        android:background="@color/colorPrimaryDark"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        style="@style/inputs"/>
</LinearLayout>